# align_trim

./: README.md  pyproject.toml
.github/workflows/: pytest.yml
align_trim/: main.py
aligntrim/: main.py  utils.py
tests/: test_integration.py  test_legacy.py  test_main.py  unittests.py
