[project]
name = "aligntrim"
version = "0.1.0"
description = "Stand alone version of ARTIC's fieldbioinfomatics align_trim.py"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bio>=1.6.2",
    "clint>=0.5.1",
    "numpy>=2.0.2",
    "primalbedtools",
    "pysam>=0.23.3",
]

[project.scripts]
aligntrim = "aligntrim.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=3.7.1,<4",
    "pytest>=8.3.5,<9",
    "ruff>=0.12",
]

[tool.uv.sources]
primalbedtools = { path = "../primalbedtools/dist/primalbedtools-0.10.0-py3-none-any.whl" }
