[project]
name = "align_trim"
version = "0.1.0"
description = "Stand alone version of ARTIC's fieldbioinfomatics align_trim.py"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.2",
    "primalbedtools>=0.10.1",
    "pysam>=0.23.3",
]

[project.scripts]
align_trim = "align_trim.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=3.7.1,<4",
    "pytest>=8.3.5,<9",
    "ruff>=0.12",
]
